tests/NormalTests/paczka1/fuzzy1/35976776.err
Error in line 3: UhMqM S461 53,3
Error in line 27: bhaGTZ1 S461 25,85
Error in line 28: b6v S675 59,1
Error in line 24: UhMqM S675 70,0
